<resources>
    <string name="app_name">Coppertino</string>

    <!-- TODO: Remove or change this song_placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="button">Button</string>
    <string name="summer_reigns">Summer Reigns</string>
    <string name="rick_ross">Rick Ross</string>
    <string name="port_of_miami_2">Port of Miami 2</string>
    <string name="_0_00">0:00</string>
    <string name="_3_05">3:05</string>
    <string name="rick_ross_port_of_miami_2">Rick Ross • Port Of Miami 2</string>
    <string name="_2_albums">2 Albums</string>
</resources>
