<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/artistCard"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <LinearLayout
        android:id="@+id/artistCardInfo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/artistCardImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:contentDescription="@string/thumbnail"
            android:elevation="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />

        <TextView
            android:id="@+id/artistCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/rick_ross" />

        <TextView
            android:id="@+id/artistCardNumberOfAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/_2_albums"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>