<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/songCard"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/songCardImgContainer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:elevation="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp">

        <ImageView
            android:id="@+id/songCardImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/thumbnail"
            app:srcCompat="@drawable/cover" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/songCardInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/songCardImgContainer"
        android:orientation="vertical">

        <TextView
            android:id="@+id/songCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_light"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/summer_reigns" />

        <TextView
            android:id="@+id/songCardArtistAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_light"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            tools:text="@string/rick_ross_port_of_miami_2" />
    </LinearLayout>
</RelativeLayout>