<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/albumCard"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/albumCardInfo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumCardImgContainer"
        android:orientation="vertical">

        <TextView
            android:id="@+id/albumCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/port_of_miami_2" />

        <TextView
            android:id="@+id/albumCardArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            tools:text="@string/rick_ross" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/albumCardImgContainer"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp">

        <ImageView
            android:id="@+id/albumCardImg"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cover" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>