<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/infoAlbumAppbar"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/infoAlbumCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundWhitish"
            app:contentScrim="@color/colorBackgroundWhitish"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/infoAlbumToolbar"
                style="@style/ToolbarTheme"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:id="@+id/infoToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="10dp">

                    <ImageView
                        android:id="@+id/infoAlbumImg"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0"
                        android:contentDescription="@string/thumbnail"
                        tools:srcCompat="@drawable/cover" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/infoAlbumTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:ellipsize="marquee"
                        android:fontFamily="@font/roboto_light"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@string/port_of_miami_2" />

                    <TextView
                        android:id="@+id/infoAlbumArtist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ellipsize="marquee"
                        android:fontFamily="@font/roboto_thin"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        tools:text="@string/rick_ross" />

                    <TextView
                        android:id="@+id/infoAlbumTrackCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_thin"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        tools:text="12 Tracks" />

                    <TextView
                        android:id="@+id/infoAlbumYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_thin"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        tools:text="2019" />

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAlbumInfoSongs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>